styles/style.css
body {
  position: relative;
  overflow-x: hidden;
}
.container-fluid {
  max-width: 84%;
  margin-left: 0;
  padding-left: 0;
  padding-right: 0;
}
header {
  padding-left: 20px;
  padding-bottom: 70px;
}
section {
  margin-left: 20px;
  margin-right: 20px;
  border-bottom: 1px solid #141414;
  margin-bottom: 30px;
}
section .row {
  margin-right: -10px;
}
body {
  font-family: "Akkurat";
  font-size: 17px;
}
a {
  font-weight: bold;
  font-style: italic;
  text-decoration: none;
  color: #000;
}
header {
  position: relative;
  padding-top: 20px;
  padding-right: 20px;
}
header .container-fluid {
  padding-right: 10px;
}
.arch {
  position: absolute;
  right: 20px;
  top: 20px;
  width: auto;
}
header p {
  line-height: 1.2;
}
header p + p {
  margin-left: 40px;
}
header p:first-of-type {
  max-width: 915px;
}
section .row > div {
  padding-right: 10px;
  padding-bottom: 10px;
}
section img {
  max-width: 100%;
  max-height: 350px;
  object-fit: cover;
  width: 100%;
}
.section-info {
  display: flex;
  margin-top: -10px;
  margin-bottom: 10px;
  padding-top: 5px;
  justify-content: space-between;
}
.section-info p {
  font-size: 14px;
}
.section-info > p:not(:last-of-type) {
  margin-right: 50px;
}
.modal-img {
  cursor: zoom-in;
  transition: 300ms all ease-in-out;
}
.modal,
.modal-img {
  z-index: 99999;
}
@media screen and (max-width: 991px) {
  header p + p {
    margin-left: 0;
    margin-top: 40px;
  }
  .arch {
    position: static;
    padding-top: 40px;
    display: inline-block;
  }
  .container-fluid {
    max-width: 100%;
  }
}
@media screen and (max-width: 1199px) {
  .section-info {
    flex-wrap: wrap;
  }
  .section-info p:last-of-type {
    width: 100%;
    margin-top: 10px;
  }
}
.modal {
  display: flex;
  visibility: hidden;
  opacity: 0;
  position: fixed;
  width: 100%;
  height: 100%;
  left: 0;
  top: 0;
  transition: 300ms all ease-in-out;
  background: rgba(0, 0, 0, 0.7);
  /* padding: 50px; */
  justify-content: center;
  align-items: center;
}
.modal span {
  position: absolute;
  top: 20px;
  right: 50px;
  color: #000;
  background: #fff;
  display: block;
  padding: 10px;
  border-radius: 5px;
  font-size: 30px;
  font-weight: bold;
  cursor: pointer;
}
.modal.active {
  visibility: visible;
  opacity: 1;
}
.modal img {
  max-width: 100%;
  max-height: 100%;
  height: auto;
}

